# jenga

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  PPP-sklearn-wrapper-example.ipynb  README.md  autoclean-example-plots.html  autoclean-example-plots.ipynb  autoclean-example.ipynb  autocleaning.ipynb  autogluon-imputation.ipynb  basic-example-siks-lecture.ipynb  basic-example.ipynb  cikm-submission-image-augmentation.ipynb  cikm-submission-missing-value-imputation.ipynb  cikm-submission-schema-stresstest.ipynb  corruptions.ipynb  environment.yaml  example-image-augmentation.ipynb  example-missing-value-imputation.ipynb  example-movieratings.ipynb  example-reviews.ipynb  example-reviews.py  example-schema-stresstest.ipynb  example-shoes.ipynb  example-shoes.py  example.py  examples-corruption_impact_evaluation.py  examples-schema_validation.py  impute-missing-values-siks-lecture.ipynb  missing-values-and-imputation.ipynb  missing-values.ipynb  paper-schema-validation.py  paper_missing_values.py  ppp-mlops.ipynb  random_schema_validation.py  requirements.txt  results_linear.csv  results_nonlinear.csv  (+7 more)
data/: .gitignore
data/income/: adult.csv
docs/: Makefile  conf.py  index.rst
jenga/: basis.py  corruptions.py  ppp.py
jenga-demo/: jenga-demo.ipynb  jenga-demo.slides.html
jenga-demo/figs/: jenga-small-poster.key  workflow.key
jenga/cleaning/: Cleaners.py  autoclean.py  cleaner.py  cleaners.py  imputation.py  outlier_removal.py  ppp.py
jenga/corruptions/: categorical.py  generic.py  image.py  missing.py  numerical.py  text.py
jenga/evaluation/: autocleaning.py  corruption_impact.py  schema_stresstest.py  schema_validation.py
jenga/tasks/: autocleaning.py  income.py  movies.py  openml.py  reviews.py  shoes.py
notebooks/: basic-OpenML-example.ipynb  basic-example-siks-lecture.ipynb  basic-example.ipynb  corruptions.ipynb  example-image-augmentation.ipynb  example-missing-value-imputation-datawig.ipynb  example-missing-value-imputation.ipynb  example-schema-stresstest.ipynb  impute-missing-values-siks-lecture.ipynb
scripts/: train_model.py
src/jenga/: basis.py  utils.py
src/jenga/corruptions/: generic.py  image.py  numerical.py  text.py
src/jenga/evaluation/: basis.py  corruption_impact.py  schema_stresstest.py  schema_validation.py
src/jenga/tasks/: income.py  openml.py  reviews.py  shoes.py
tests/: conftest.py
